# ImageEffects

./: CMakeLists.txt  Effect.cpp  Effect.h  Palette.cpp  Palette.h  PixelSorter.cpp  PixelSorter.h  Pixelator.cpp  Pixelator.h  README.md  main.cpp
